--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.1"
 edition = "2021"
 
 [dependencies]
-env_logger="0.11.3"
+#env_logger="0.11.3"
+fern = "0.6.2"
 log="0.4.21"
 chrono="0.4.38"
-termcolor="1.4.1"
-once_cell="*"
+owo-colors="*"
+#termcolor="1.4.1"
+#once_cell="*"
