--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,7 @@ edition = "2021"
 
 [dependencies]
 #env_logger="0.11.3"
-fern = "0.6.2"
-log="0.4.21"
+fern = "0.7.0"
+log="0.4.22"
 chrono="0.4.38"
-owo-colors="*"
-#termcolor="1.4.1"
-#once_cell="*"
+owo-colors="4.1.0"
